[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/EggPicking.gd" type="Script" id=1]
[ext_resource path="res://assets/eggs/chicken.png" type="Texture" id=2]
[ext_resource path="res://assets/eggs/chode-egg.png" type="Texture" id=3]

[node name="EggPicking" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -51.0
margin_top = -43.0
margin_right = 13.0
margin_bottom = 12.0
rect_scale = Vector2( 18.306, 12.929 )
color = Color( 0, 0, 0, 0.337255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Eggs" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
custom_constants/separation = 128
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstEgg" type="TextureButton" parent="Eggs"]
margin_left = 192.0
margin_right = 320.0
margin_bottom = 600.0
rect_min_size = Vector2( 128, 0 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="SecondEgg" type="TextureButton" parent="Eggs"]
margin_left = 448.0
margin_right = 576.0
margin_bottom = 600.0
rect_min_size = Vector2( 128, 0 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ThirdEgg" type="TextureButton" parent="Eggs"]
margin_left = 704.0
margin_right = 832.0
margin_bottom = 600.0
rect_min_size = Vector2( 128, 0 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="."]
margin_left = 1.0
margin_top = 84.0
margin_right = 1021.0
margin_bottom = 161.0
text = "What will you hatch next?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
